--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
 setTimeout(function() {
-    alert('window.location.replace("../index.php");')
+    alert(window.location.href + 'window.location.replace("../index.php");')
   }, 5000);
   documen.write(window.location.href);
 </script>
