--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
 setTimeout(function() {
-    alert(window.location.href + 'window.location.replace("../index.php");')
+    let url = window.location.href.split('download=')[1];
+    alert(url)
   }, 5000);
-  documen.write(window.location.href);
 </script>
