--- a/index.html
+++ b/index.html
@@ -13,3 +13,6 @@
           }, 5000);
     }
 </script>
+<img src='topheader.jpg'>
+<img src='song-cover.jpg' width='500'>
+<iframe src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview" width="640" height="480"></iframe>
