--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
     }
 </script>
 <img src='topheader.jpg'>
-<img src='song-cover.jpg' width='500'>
+<img src='https://drive.google.com/file/d/1KUb9Rq-aOeP2PBO4XGvxIGqhq3zgr8QX/preview' width='500'>
 <iframe src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview" width="640" height="480"></iframe>
