--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+<head>
 <title> You are your Word official Song </title>
 <script>
     
@@ -14,6 +16,110 @@
           }, 5000);
     }
 </script>
+<style>
+    /* Style the header with a grey background and some padding */
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+/* Style the header links */
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+/* Change the background color on mouse-over */
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active/current link*/
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+/* Float the link section to the right */
+.header-right {
+  float: right;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */ 
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
+}
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img , div.gallery video {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+</style>
+</head>
+<body>
+<div class="header">
+  <a href="#default" class="logo">Official Josh Daniels</a>
+  <div class="header-right">
+    <a class="active" href="./">Home</a>
+    <a href="?download=mp3">Download MP3</a>
+    <a href="?download=mp4">Download Lyrcis Video</a>
+  </div>
+</div>
+<div class="gallery">
+  <a target="_blank" href="?download=mp3">
+      <img src='song-cover.jpg' alt="Northern Lights" width="300" height="300">
+  </a>
+  <div class="desc">
+      <a target="_blank" href="?download=mp3"> Download Audio (MP3) </a>
+  </div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="download=mp4">
+    <video src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview" width="640" height="480"></video>
+  </a>
+    <div class="desc">
+        <a target="_blank" href="download=mp4">Download Lyrics Video </a>
+    </div>
+</div>
+
+</body>
+</html>
 <img src='topheader.jpg'>
-<img src='https://drive.google.com/file/d/1KUb9Rq-aOeP2PBO4XGvxIGqhq3zgr8QX/preview' width='500'>
-<iframe src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview" width="640" height="480"></iframe>
+<a href=''>
