--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
     }
 </script>
 <style>
+    body {
+    margin: 0 auto;
+        padding: 0;
+    }
     /* Style the header with a grey background and some padding */
 .header {
+    width: 100%;
   overflow: hidden;
   background-color: #f1f1f1;
   padding: 20px 10px;
@@ -70,6 +75,10 @@
     float: none;
   }
 }
+    .slider {
+        width: 100%;
+        height: 200px;
+    }
 div.gallery {
     margin: 5px;
     border: 1px solid #ccc;
@@ -101,6 +110,8 @@ div.desc {
     <a href="?download=mp4">Download Lyrcis Video</a>
   </div>
 </div>
+    <div class='slider'> 
+        <img src='topheader.jpg'></div>
 <div class="gallery">
   <a target="_blank" href="?download=mp3">
       <img src='song-cover.jpg' alt="Northern Lights" width="300" height="300">
@@ -121,5 +132,3 @@ div.desc {
 
 </body>
 </html>
-<img src='topheader.jpg'>
-<a href=''>
