--- a/index.html
+++ b/index.html
@@ -79,11 +79,16 @@
         width: 100%;
         height: 200px;
     }
+    .slider img {
+        width: 100%;
+        max-height: 250px;
+    }
+
 div.gallery {
     margin: 5px;
     border: 1px solid #ccc;
     float: left;
-    width: 180px;
+    width: 300px;
 }
 
 div.gallery:hover {
@@ -98,6 +103,23 @@ div.gallery img , div.gallery video {
 div.desc {
     padding: 15px;
     text-align: center;
+}
+    iframe {
+        border: none;
+        box-shadow: 1px 1px 4px #000;
+    }
+    .videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+    iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 </style>
 </head>
@@ -121,7 +143,7 @@ div.desc {
   </div>
 </div>
 
-<div class="gallery">
+<div class="gallery videoWrapper">
   <a target="_blank" href="download=mp4">
     <video src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview" width="640" height="480"></video>
   </a>
