--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 }
     .slider {
         width: 100%;
-        height: 200px;
+        height: 260px;
     }
     .slider img {
         width: 100%;
@@ -134,6 +134,7 @@ div.desc {
 </div>
     <div class='slider'> 
         <img src='topheader.jpg'></div>
+	<br/><br/>
 <div class="gallery">
   <a target="_blank" href="?download=mp3">
       <img src='song-cover.jpg' alt="Northern Lights" width="300" height="300">
@@ -145,7 +146,7 @@ div.desc {
 
 <div class="gallery videoWrapper">
   <a target="_blank" href="download=mp4">
-    <video src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview" width="640" height="480"></video>
+    <iframe src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview" width="640" height="480"></iframe>
   </a>
     <div class="desc">
         <a target="_blank" href="download=mp4">Download Lyrics Video </a>
