--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     width: 100%;
   overflow: hidden;
   background-color: #f1f1f1;
-  padding: 20px 10px;
+  padding: 10px 10px;
 }
 
 /* Style the header links */
@@ -146,7 +146,7 @@ div.desc {
 
 <div class="gallery videoWrapper">
   <a target="_blank" href="download=mp4">
-    <iframe src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview" width="640" height="480"></iframe>
+    <iframe src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview"></iframe>
   </a>
     <div class="desc">
         <a target="_blank" href="download=mp4">Download Lyrics Video </a>
