--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ div.gallery img , div.gallery video {
 div.desc {
     padding: 15px;
     text-align: center;
+	background: #1E90FF;
 }
     iframe {
         border: none;
@@ -118,8 +119,7 @@ div.desc {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	width: 66%;
 }
 </style>
 </head>
@@ -144,7 +144,7 @@ div.desc {
   </div>
 </div>
 
-<div class="gallery videoWrapper">
+<div class="gallery">
   <a target="_blank" href="download=mp4">
     <iframe src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview"></iframe>
   </a>
