--- a/index.html
+++ b/index.html
@@ -109,17 +109,12 @@ div.desc {
         border: none;
         box-shadow: 1px 1px 4px #000;
     }
-    .videoWrapper {
-	position: relative;
-	padding-bottom: 56.25%; /* 16:9 */
-	padding-top: 25px;
-	height: 0;
-}
     iframe {
-	position: absolute;
+	position: relative;
 	top: 0;
 	left: 0;
 	width: 66%;
+	height: 300vh;
 }
 </style>
 </head>
