--- a/index.html
+++ b/index.html
@@ -113,9 +113,13 @@ div.desc {
 	position: relative;
 	top: 0;
 	left: 0;
-	width: 66%;
-	height: 300vh;
-}
+	width: 100%;
+	height: 30vh;
+	}
+	.lee {
+	min-width: 400px;
+		width: auto;
+	}
 </style>
 </head>
 <body>
@@ -139,7 +143,7 @@ div.desc {
   </div>
 </div>
 
-<div class="gallery">
+<div class="gallery lee">
   <a target="_blank" href="download=mp4">
     <iframe src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview"></iframe>
   </a>
