--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@ div.desc {
     padding: 15px;
     text-align: center;
 	background: #1E90FF;
+	color: #fff;
 }
+	div.desc a{color: #fff;}
     iframe {
         border: none;
         box-shadow: 1px 1px 4px #000;
@@ -114,7 +116,8 @@ div.desc {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 30vh;
+	height: auto;
+	    min-height: 300px
 	}
 	.lee {
 	min-width: 400px;
@@ -143,7 +146,7 @@ div.desc {
   </div>
 </div>
 
-<div class="gallery lee">
+<div class="gallery lee" style='width: 500px'>
   <a target="_blank" href="download=mp4">
     <iframe src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview"></iframe>
   </a>
