--- a/index.html
+++ b/index.html
@@ -28,51 +28,44 @@
   background-color: #f1f1f1;
   padding: 10px 10px;
 }
+.navbar {
+  width: 100%;
+  background-color: #555;
+  overflow: auto;
+}
 
-/* Style the header links */
-.header a {
+/* Navbar links */
+.navbar a {
   float: left;
-  color: black;
   text-align: center;
   padding: 12px;
-  text-decoration: none;
-  font-size: 18px; 
-  line-height: 25px;
-  border-radius: 4px;
-}
-
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
-}
-
-/* Change the background color on mouse-over */
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Style the active/current link*/
-.header a.active {
-  background-color: dodgerblue;
   color: white;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-/* Float the link section to the right */
-.header-right {
-  float: right;
+/* Navbar links on mouse-over */
+.navbar a:hover {
+  background-color: #000;
 }
 
-/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */ 
+/* Current/active navbar link */
+.active {
+  background-color: #4CAF50;
+}
+.center {
+	
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);}
+/* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
 @media screen and (max-width: 500px) {
-  .header a {
+  .navbar a {
     float: none;
     display: block;
-    text-align: left;
-  }
-  .header-right {
-    float: none;
   }
 }
     .slider {
@@ -105,6 +98,7 @@ div.desc {
     text-align: center;
 	background: #1E90FF;
 	color: #fff;
+	text-transform: uppercase;
 }
 	div.desc a{color: #fff;}
     iframe {
@@ -126,17 +120,15 @@ div.desc {
 </style>
 </head>
 <body>
-<div class="header">
-  <a href="#default" class="logo">Official Josh Daniels</a>
-  <div class="header-right">
-    <a class="active" href="./">Home</a>
-    <a href="?download=mp3">Download MP3</a>
+<div class="navbar">
+  <a class="active" href="#">Official Josh Daniels</a> 
+    <a href="?download=mp3"> Download MP3</a>
     <a href="?download=mp4">Download Lyrcis Video</a>
-  </div>
 </div>
     <div class='slider'> 
         <img src='topheader.jpg'></div>
 	<br/><br/>
+	<div class='center'>
 <div class="gallery">
   <a target="_blank" href="?download=mp3">
       <img src='song-cover.jpg' alt="Northern Lights" width="300" height="300">
@@ -154,6 +146,6 @@ div.desc {
         <a target="_blank" href="download=mp4">Download Lyrics Video </a>
     </div>
 </div>
-
+	</div>
 </body>
 </html>
