--- a/index.html
+++ b/index.html
@@ -54,13 +54,8 @@
   background-color: #4CAF50;
 }
 .center {
-	
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);}
+  margin: 0
+	}
 /* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
 @media screen and (max-width: 500px) {
   .navbar a {
