--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
   background-color: #4CAF50;
 }
 .center {
-  margin: 0
+    max-width: 80%;
+    margin: auto;
 	}
 /* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
 @media screen and (max-width: 500px) {
