--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
 }
 .navbar {
   width: 100%;
-  background-color: #555;
+  background-color: #ccc;
   overflow: auto;
+	margin-botton: 10px;
+-webkit-box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
+-moz-box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
+box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
 }
 
 /* Navbar links */
@@ -51,12 +55,13 @@
 
 /* Current/active navbar link */
 .active {
-  background-color: #4CAF50;
+  width: 400px;
+	font-size: 20px;
 }
 .center {
-    max-width: 80%;
+    max-width: 70%;
     margin: auto;
-	}
+}
 /* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
 @media screen and (max-width: 500px) {
   .navbar a {
