--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 }
 .navbar {
   width: 100%;
-  background-color: #ccc;
+  background-color: #333;
   overflow: auto;
 	margin-botton: 10px;
+	padding: 15px;
 -webkit-box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
 -moz-box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
 box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
@@ -54,7 +55,8 @@ box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
 }
 
 /* Current/active navbar link */
-.active {
+.active, active a:hover {
+  background-color: #333;
   width: 400px;
 	font-size: 20px;
 }
