--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title> You are your Word official Song </title>
+<title> You are your Word official Song by Josh Daniels </title>
 <script>
     
     let url = 'all';
     let xurl = window.location.href.split('download=')[1];
-     if (xurl === 'mp3' || xurl === 'audio' || xurl === 'song'){
+     if (xurl === 'mp3' || xurl === 'm3' || xurl === 'audio' || xurl === 'song'){
        url = 'http://bit.ly/you-are-your-word-josh-daniels';
     }else if (xurl === 'lyrics' || xurl === 'mp4' || xurl === 'video'){
         url = 'http://bit.ly/you-are-your-word-josh-daniels';
@@ -20,67 +20,23 @@
     body {
     margin: 0 auto;
         padding: 0;
+	text-transform: uppercase;
     }
-    /* Style the header with a grey background and some padding */
-.header {
-    width: 100%;
-  overflow: hidden;
-  background-color: #f1f1f1;
-  padding: 10px 10px;
-}
-.navbar {
-  width: 100%;
-  background-color: #333;
-  overflow: auto;
-	margin-botton: 10px;
-	padding: 15px;
--webkit-box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
--moz-box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
-box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
-}
-
-/* Navbar links */
-.navbar a {
-  float: left;
-  text-align: center;
-  padding: 12px;
-  color: white;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Navbar links on mouse-over */
-.navbar a:hover {
-  background-color: #000;
-}
-
-/* Current/active navbar link */
-.active, active a:hover {
-  background-color: #333;
-  width: 400px;
-	font-size: 20px;
-}
-.center {
-    max-width: 70%;
-    margin: auto;
-}
-/* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
-@media screen and (max-width: 500px) {
-  .navbar a {
-    float: none;
-    display: block;
-  }
-}
     .slider {
         width: 100%;
         height: 260px;
+	    -webkit-box-shadow: -1px 6px 29px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: -1px 6px 29px 0px rgba(0,0,0,0.75);
+box-shadow: -1px 6px 29px 0px rgba(0,0,0,0.75);
     }
     .slider img {
         width: 100%;
         max-height: 250px;
     }
 
-div.gallery {
+div.gallery {-webkit-box-shadow: -1px 6px 29px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: -1px 6px 29px 0px rgba(0,0,0,0.75);
+box-shadow: -1px 6px 29px 0px rgba(0,0,0,0.75);
     margin: 5px;
     border: 1px solid #ccc;
     float: left;
@@ -101,7 +57,6 @@ div.desc {
     text-align: center;
 	background: #1E90FF;
 	color: #fff;
-	text-transform: uppercase;
 }
 	div.desc a{color: #fff;}
     iframe {
@@ -122,12 +77,7 @@ div.desc {
 	}
 </style>
 </head>
-<body>
-<div class="navbar">
-  <a class="active" href="#">Official Josh Daniels</a> 
-    <a href="?download=mp3"> Download MP3</a>
-    <a href="?download=mp4">Download Lyrcis Video</a>
-</div>
+<body> 
     <div class='slider'> 
         <img src='topheader.jpg'></div>
 	<br/><br/>
