--- a/index.html
+++ b/index.html
@@ -25,18 +25,22 @@
     .slider {
         width: 100%;
         height: 260px;
-	    -webkit-box-shadow: -1px 6px 29px 0px rgba(0,0,0,0.75);
--moz-box-shadow: -1px 6px 29px 0px rgba(0,0,0,0.75);
-box-shadow: -1px 6px 29px 0px rgba(0,0,0,0.75);
+	   -webkit-box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
+-moz-box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
+box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
     }
     .slider img {
         width: 100%;
         max-height: 250px;
     }
-
-div.gallery {-webkit-box-shadow: -1px 6px 29px 0px rgba(0,0,0,0.75);
--moz-box-shadow: -1px 6px 29px 0px rgba(0,0,0,0.75);
-box-shadow: -1px 6px 29px 0px rgba(0,0,0,0.75);
+	
+.center {	
+    max-width: 70%;	
+    margin: auto;	
+}
+div.gallery {-webkit-box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
+-moz-box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
+box-shadow: -1px 6px 29px -7px rgba(0,0,0,0.75);
     margin: 5px;
     border: 1px solid #ccc;
     float: left;
