--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	
 <title> You are your Word official Song by Josh Daniels </title>
+	<link rel="icon" href="song-cover.jpg" type="image/jpg">
 <script>
     
     let url = 'all';
     let xurl = window.location.href.split('download=')[1];
      if (xurl === 'mp3' || xurl === 'm3' || xurl === 'audio' || xurl === 'song'){
        url = 'http://bit.ly/you-are-your-word-josh-daniels';
+	     document.querySelector('header').innerHTML +=`<meta property="og:url" content="${url}" /> 
+	<meta property="og:title" content="Introducing our New Site" />
+	<meta property="og:image" content="song-cover.jpg" />
+	<meta property="og:description" content="You are your Word -- by Josh Daniel. " />
+	`;
     }else if (xurl === 'lyrics' || xurl === 'mp4' || xurl === 'video'){
         url = 'http://bit.ly/you-are-your-word-josh-daniels';
+	       document.querySelector('header').innerHTML +=`<meta property="og:url" content="${url}" /> 
+	<meta property="og:title" content="Introducing our New Site" />
+	<meta property="og:image" content="song-cover.jpg" />
+	<meta property="og:description" content="You are your Word -- by Josh Daniel. " />
+	`;
     }
     if (url !== 'all'){
         setTimeout(function() {
