--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta property="og:url" content="http://bit.ly/You_are_your_Word_official_MP3_by_Josh_Daniels" /> 
-	<meta property="og:title" content="New Song: You are your Word -- by Josh Daniel/>
+	<meta property="og:title" content="New Song: You are your Word -- by Josh Daniel"/>
 	<meta property="og:image" content="https://emmsdan.github.io/joshDaniels/song-cover.jpg" />
 	<meta property="og:description" content="You are your Word -- by Josh Daniel. " />
 	
