--- a/index.html
+++ b/index.html
@@ -95,20 +95,20 @@ div.desc {
 	<br/><br/>
 	<div class='center'>
 <div class="gallery">
-  <a target="_blank" href="?download=mp3">
+  <a target="_blank" href="http://bit.ly/you-are-your-word-josh-daniels">
       <img src='song-cover.jpg' alt="Northern Lights" width="300" height="300">
   </a>
   <div class="desc">
-      <a target="_blank" href="?download=mp3"> Download Audio (MP3) </a>
+      <a target="_blank" href="http://bit.ly/you-are-your-word-josh-daniels"> Download Audio (MP3) </a>
   </div>
 </div>
 
 <div class="gallery lee" style='width: 500px'>
-  <a target="_blank" href="download=mp4">
+  <a target="_blank" href="http://bit.ly/your-word-video-lyrics">
     <iframe src="https://drive.google.com/file/d/1PwzEBChsOgowVX5Z0t-ShyGhYS6r-ePy/preview"></iframe>
   </a>
     <div class="desc">
-        <a target="_blank" href="download=mp4">Download Lyrics Video </a>
+        <a target="_blank" href="http://bit.ly/your-word-video-lyrics">Download Lyrics Video </a>
     </div>
 </div>
 	</div>
